# giter-compare

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  search.rs
src-tauri/src/swift/Sources/: NativeToolbar.m  SwiftUIPanel.m
src/components/: CodeViewer.vue  DiffLines.vue  DiffViewer.vue  FileTree.vue  FileTreeSidebar.vue  GitCompareTool.vue  InlineSearch.vue  Minimap.vue  ProjectSidebar.vue  ShikiCodeViewer.vue  ShikiDiffLines.vue  StagedFileList.vue  TabBar.vue  Toolbar.vue  VirtualDiffLines.vue
src/components/dialogs/: AddProjectDialog.vue  DialogBase.vue  FileCompareDialog.vue  GlobalSearchDialog.vue  PluginManagerDialog.vue  PromptDialog.vue  TextCompareDialog.vue  WorkspaceManagerDialog.vue  index.ts
src/router/: index.ts
src/utils/: monacoConfig.ts  pluginManager.ts  shikiHighlighter.ts  swiftuiNative.ts
src/views/: About.vue  Home.vue
