[package]
name = "git-compare-tool"
version = "0.1.0"
description = "A Git Compare Tool like Beyond Compare"
authors = ["you"]
edition = "2021"

[lib]
name = "git_compare_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "sync"] }
tauri-plugin-dialog= "2"
tauri-plugin-shell = "2"
git2 = "0.19"
notify = "6"
notify-debouncer-mini = { version = "0.4", default-features = false }
dirs = "5"
