[package]
name = "git-compare-tool"
version = "0.1.0"
description = "A Git Compare Tool like Beyond Compare"
authors = ["you"]
edition = "2021"

[lib]
name = "git_compare_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "sync"] }
tauri-plugin-dialog= "2"
tauri-plugin-shell = "2"
git2 = "0.19"
regex = "1"
dirs = "6"
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-liquid-glass = "0.1"
objc = "0.2"
cocoa = "0.25"
notify = "6"
notify-debouncer-mini = { version = "0.4", default-features = false }
libc = "0.2"
